# kulki

./: .gitignore  CMakeLists.txt  UiDesign.dia  allegro.h  board.h  config.cpp  config.h  config.mn  config.var.mn  high_score  hs  kulki.h  kulki_states.cpp  kulki_states.h  main.cpp  make_highscore.sh  platform.cpp  platform.h  resources.cpp  resources.h  state_node.h  todo.md  utility.h
gui/: widget.cpp  widget.h  widget_bar.h
model/: board.h  config.cpp  config.h  high_score.cpp  high_score.h  kulki_constants.cpp  kulki_constants.h
states/: deal_state.cpp  deal_state.h  game_over_state.cpp  game_over_state.h  gui_test_state.cpp  gui_test_state.h  high_score_display_state.cpp  high_score_input_state.cpp  high_score_state.cpp  high_score_state.h  kulki_constants.cpp  kulki_constants.h  kulki_context.cpp  kulki_context.h  kulki_state.h  kulki_state_deal.cpp  kulki_state_deal.h  kulki_state_game_over.cpp  kulki_state_game_over.h  kulki_state_high_score.cpp  kulki_state_high_score.h  kulki_state_menu.cpp  kulki_state_menu.h  kulki_state_move.cpp  kulki_state_move.h  kulki_state_score.cpp  kulki_state_score.h  kulki_state_wait_dest.cpp  kulki_state_wait_dest.h  kulki_ui.cpp  kulki_ui.h  kulki_variables.cpp  kulki_variables.h  menu_state.cpp  menu_state.h  move_state.cpp  move_state.h  options_state.cpp  score_state.cpp  score_state.h  (+4 more)
xeno/: dick.h  moon.h
